Updating to AP2008/AP2008.github.io/Notes@6f981aeaf05c384a5e837946273cd698a5886111.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@ SimpleJekyllSearch({
       <div class="container content">
         <h1 id="my-notes">My Notes</h1>
 <h2 id="geography-geography">Geography: <a href="/Notes/Geography" title="Geography">Geography</a></h2>
-<h2 id="biology-biology-chemistry-chemistry">Biology: <a href="/Notes/Biology" title="Biology">Biology</a>## Chemistry: <a href="/Notes/Chemistry" title="Chemistry">Chemistry</a></h2>
+<h2 id="biology-biology">Biology: <a href="/Notes/Biology" title="Biology">Biology</a></h2>
+<h2 id="chemistry-chemistry">Chemistry: <a href="/Notes/Chemistry" title="Chemistry">Chemistry</a></h2>
 
       </div>
     </div>
