--- a/Chemistry/index.html
+++ b/Chemistry/index.html
@@ -149,6 +149,7 @@ SimpleJekyllSearch({
 
   <ul>
 <li><a href="/Notes/Chemistry/Chapter3">Chapter 3: Fiber to Fabric</a></li>
+<li><a href="/Notes/Chemistry/Chapter4">Chapter 4: Chemicals and Chemical changes</a></li>
 </ul>
 
 
